--- a/app/public/assets/css/science.css
+++ b/app/public/assets/css/science.css
@@ -4,7 +4,7 @@
     margin-top: 10%;   
 }
 .sciencePageDetail {
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
     /* padding-bottom: 1%; */
 }
