--- a/app/public/assets/css/writing.css
+++ b/app/public/assets/css/writing.css
@@ -38,7 +38,7 @@
     margin-top: 65%;
 }
 .poetry {
-    margin-top: 40%;
+    margin-top: 39%;
     margin-bottom: 10%;
 }
 
